@@ -1,5 +1,5 @@
 /*
- *    Copyright 2016-2024 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -19,7 +19,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
+import org.jspecify.annotations.Nullable;
 
 public class BatchInsert<T> {
     private final String insertStatement;
@@ -38,7 +39,7 @@ public class BatchInsert<T> {
     public List<InsertStatementProvider<T>> insertStatements() {
         return records.stream()
                 .map(this::toInsertStatement)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private InsertStatementProvider<T> toInsertStatement(T row) {
@@ -57,7 +58,7 @@ public class BatchInsert<T> {
     }
 
     public List<T> getRecords() {
-        return Collections.unmodifiableList(records);
+        return records;
     }
 
     public static <T> Builder<T> withRecords(List<T> records) {
@@ -65,7 +66,7 @@ public class BatchInsert<T> {
     }
 
     public static class Builder<T> {
-        private String insertStatement;
+        private @Nullable String insertStatement;
         private final List<T> records = new ArrayList<>();
 
         public Builder<T> withInsertStatement(String insertStatement) {
