@@ -1,5 +1,5 @@
 /*
- *    Copyright 2016-2024 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -23,9 +23,8 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.Nullable;
 import org.mybatis.dynamic.sql.BasicColumn;
 import org.mybatis.dynamic.sql.SortSpecification;
 import org.mybatis.dynamic.sql.common.OrderByModel;
@@ -33,6 +32,7 @@ import org.mybatis.dynamic.sql.configuration.StatementConfiguration;
 import org.mybatis.dynamic.sql.select.QueryExpressionDSL.FromGatherer;
 import org.mybatis.dynamic.sql.util.Buildable;
 import org.mybatis.dynamic.sql.util.ConfigurableStatement;
+import org.mybatis.dynamic.sql.util.Validator;
 
 /**
  * Implements a SQL DSL for building select statements.
@@ -46,10 +46,13 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
 
     private final Function<SelectModel, R> adapterFunction;
     private final List<QueryExpressionDSL<R>> queryExpressions = new ArrayList<>();
-    private OrderByModel orderByModel;
-    private Long limit;
-    private Long offset;
-    private Long fetchFirstRows;
+    private @Nullable OrderByModel orderByModel;
+    private @Nullable Long limit;
+    private @Nullable Long offset;
+    private @Nullable Long fetchFirstRows;
+    final StatementConfiguration statementConfiguration = new StatementConfiguration();
+    private @Nullable String forClause;
+    private @Nullable String waitClause;
 
     private SelectDSL(Function<SelectModel, R> adapterFunction) {
         this.adapterFunction = Objects.requireNonNull(adapterFunction);
@@ -108,32 +111,82 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
     }
 
     public LimitFinisher limit(long limit) {
+        return limitWhenPresent(limit);
+    }
+
+    public LimitFinisher limitWhenPresent(@Nullable Long limit) {
         this.limit = limit;
         return new LimitFinisher();
     }
 
     public OffsetFirstFinisher offset(long offset) {
+        return offsetWhenPresent(offset);
+    }
+
+    public OffsetFirstFinisher offsetWhenPresent(@Nullable Long offset) {
         this.offset = offset;
         return new OffsetFirstFinisher();
     }
 
     public FetchFirstFinisher fetchFirst(long fetchFirstRows) {
+        return fetchFirstWhenPresent(fetchFirstRows);
+    }
+
+    public FetchFirstFinisher fetchFirstWhenPresent(@Nullable Long fetchFirstRows) {
         this.fetchFirstRows = fetchFirstRows;
         return new FetchFirstFinisher();
     }
 
-    @Override
-    public SelectDSL<R> configureStatement(Consumer<StatementConfiguration> consumer) {
-        queryExpressions.forEach(q -> q.configureStatement(consumer));
+    public SelectDSL<R> forUpdate() {
+        Validator.assertNull(forClause, "ERROR.48"); //$NON-NLS-1$
+        forClause = "for update"; //$NON-NLS-1$
         return this;
     }
 
-    @NotNull
+    public SelectDSL<R> forNoKeyUpdate() {
+        Validator.assertNull(forClause, "ERROR.48"); //$NON-NLS-1$
+        forClause = "for no key update"; //$NON-NLS-1$
+        return this;
+    }
+
+    public SelectDSL<R> forShare() {
+        Validator.assertNull(forClause, "ERROR.48"); //$NON-NLS-1$
+        forClause = "for share"; //$NON-NLS-1$
+        return this;
+    }
+
+    public SelectDSL<R> forKeyShare() {
+        Validator.assertNull(forClause, "ERROR.48"); //$NON-NLS-1$
+        forClause = "for key share"; //$NON-NLS-1$
+        return this;
+    }
+
+    public SelectDSL<R> skipLocked() {
+        Validator.assertNull(waitClause, "ERROR.49"); //$NON-NLS-1$
+        waitClause = "skip locked"; //$NON-NLS-1$
+        return this;
+    }
+
+    public SelectDSL<R> nowait() {
+        Validator.assertNull(waitClause, "ERROR.49"); //$NON-NLS-1$
+        waitClause = "nowait"; //$NON-NLS-1$
+        return this;
+    }
+
+    @Override
+    public SelectDSL<R> configureStatement(Consumer<StatementConfiguration> consumer) {
+        consumer.accept(statementConfiguration);
+        return this;
+    }
+
     @Override
     public R build() {
         SelectModel selectModel = SelectModel.withQueryExpressions(buildModels())
                 .withOrderByModel(orderByModel)
                 .withPagingModel(buildPagingModel().orElse(null))
+                .withStatementConfiguration(statementConfiguration)
+                .withForClause(forClause)
+                .withWaitClause(waitClause)
                 .build();
         return adapterFunction.apply(selectModel);
     }
@@ -141,7 +194,7 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
     private List<QueryExpressionModel> buildModels() {
         return queryExpressions.stream()
                 .map(QueryExpressionDSL::buildModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Optional<PagingModel> buildPagingModel() {
@@ -152,34 +205,42 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
                 .build();
     }
 
-    public class LimitFinisher implements Buildable<R> {
-        public OffsetFinisher offset(long offset) {
-            SelectDSL.this.offset(offset);
-            return new OffsetFinisher();
-        }
-
-        @NotNull
-        @Override
-        public R build() {
-            return SelectDSL.this.build();
-        }
-    }
-
-    public class OffsetFinisher implements Buildable<R> {
-        @NotNull
-        @Override
-        public R build() {
-            return SelectDSL.this.build();
-        }
-    }
-
-    public class OffsetFirstFinisher implements Buildable<R> {
+    public class OffsetFirstFinisher implements SelectDSLForAndWaitOperations<R>, Buildable<R> {
         public FetchFirstFinisher fetchFirst(long fetchFirstRows) {
-            SelectDSL.this.fetchFirst(fetchFirstRows);
+            return fetchFirstWhenPresent(fetchFirstRows);
+        }
+
+        public FetchFirstFinisher fetchFirstWhenPresent(@Nullable Long fetchFirstRows) {
+            SelectDSL.this.fetchFirstRows = fetchFirstRows;
             return new FetchFirstFinisher();
         }
 
-        @NotNull
+        @Override
+        public SelectDSL<R> getSelectDSL() {
+            return SelectDSL.this;
+        }
+
+        @Override
+        public R build() {
+            return SelectDSL.this.build();
+        }
+    }
+
+    public class LimitFinisher implements SelectDSLForAndWaitOperations<R>, Buildable<R> {
+        public SelectDSL<R> offset(long offset) {
+            return offsetWhenPresent(offset);
+        }
+
+        public SelectDSL<R> offsetWhenPresent(@Nullable Long offset) {
+            SelectDSL.this.offset = offset;
+            return SelectDSL.this;
+        }
+
+        @Override
+        public SelectDSL<R> getSelectDSL() {
+            return SelectDSL.this;
+        }
+
         @Override
         public R build() {
             return SelectDSL.this.build();
@@ -187,16 +248,8 @@ public class SelectDSL<R> implements Buildable<R>, ConfigurableStatement<SelectD
     }
 
     public class FetchFirstFinisher {
-        public RowsOnlyFinisher rowsOnly() {
-            return new RowsOnlyFinisher();
-        }
-    }
-
-    public class RowsOnlyFinisher implements Buildable<R> {
-        @NotNull
-        @Override
-        public R build() {
-            return SelectDSL.this.build();
+        public SelectDSL<R> rowsOnly() {
+            return SelectDSL.this;
         }
     }
 }
