@@ -1,5 +1,5 @@
 /*
- *    Copyright 2016-2024 the original author or authors.
+ *    Copyright 2016-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@ package org.mybatis.dynamic.sql.util;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.mybatis.dynamic.sql.delete.render.DeleteStatementProvider;
 import org.mybatis.dynamic.sql.insert.render.GeneralInsertStatementProvider;
@@ -76,7 +75,7 @@ public class SqlProviderAdapter {
                 .map(Map.Entry::getValue)
                 .filter(String.class::isInstance)
                 .map(String.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
         if (entries.size() == 1) {
             return entries.get(0);
